fix: shadow behind tutorial

--- a/src/app/layoutsManager/layoutsManager.css
+++ b/src/app/layoutsManager/layoutsManager.css
@@ -210,6 +210,10 @@ button.upload-url-button {
     margin-top: 100px;
 }
 
+.tutorial iframe {
+    box-shadow: 0px 0px 23px 1px rgba(0,0,0,0.75);
+}
+
 .airavana {
     text-align: center;
     margin-top: 70px;
